tdf#129881 missing sections in link section

actually this is a regression from
    commit 2b77d9dba51e1c3841428f3343e9186ca9c446ae
    Date:   Wed Nov 6 11:19:12 2019 +0200
    convert SwXMLSectionList to FastParser
the commit mentioned in the bug report was fixed by caolan, and then I
broke it again with the above commit

Change-Id: If6d3dad7baadcdfcc73d87d1e9d6a91c9f65a6e5